# Newser

./: .env.example  .gitignore  PRODUCT.md  README.md  TEST_PLAN.md  app.py  config.yaml  news_analyzer.db-journal  pyproject.toml  railway.json  requirements.txt  vercel.json  web_app.py
.streamlit/: config.toml
docs/superpowers/plans/: 2026-06-17-hybrid-daily-it-brief.md
scripts/: migrate_sqlite_to_supabase.py  verify_runtime_health.ps1  verify_safe.ps1
src/: __init__.py  auth.py  database.py  dynamic_keywords.py  global_news.py  ingestor.py  media.py  processor.py  relevance.py  scoring.py  search_component.py  web_services.py
src/docs/: design.md  newser_all_documentation.md
static/: app.css  app.js
templates/: index.html
tests/: test_auth.py  test_hybrid_brief.py  test_media.py  test_web_app.py
