[project]
name = "newser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "APScheduler==3.10.4",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.138.0",
    "feedparser>=6.0.11",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.25",
    "uvicorn>=0.30.0",
]

[tool.vercel]
entrypoint = "app:app"
